2002-09-04  Stephane Carrez  <stcarrez@nerim.fr>

	* tuiIO.c (tui_putc): New function to print one character.
	(printable_part): New function from readline/complete.c.
	(PUTX): New macro, likewise.
	(print_filename): New function, likewise.
	(get_y_or_n): New function, likewise and adapted for TUI.
	(tui_rl_display_match_list): New function from readline/complete.c
	and writes on TUI command window.
	(tui_setup_io): Install or remove the readline hook
	rl_completion_display_matches_hook so that completion is written
	directly in TUI command window instead of in the TUI pipe.
	(tui_initialize_io): Use #ifdef TUI_USE_PIPE_FOR_READLINE for the
	TUI redirection pipe.
	(tui_getc): Likewise for call to tui_readline_output.
	(tui_readline_output): Likewise for function.
	* tui.c (tui_rl_startup_hook): Always take care of gdb prompt.

2002-09-02  Stephane Carrez  <stcarrez@nerim.fr>

	* tuiWin.c (_newHeightOk): Fix compilation warnings.

2002-09-01  Stephane Carrez  <stcarrez@nerim.fr>

	* tuiWin.c (_tuiAllWindowsInfo): Don't crash if the window
	is not displayed.

2002-09-01  Stephane Carrez  <stcarrez@nerim.fr>

	* tui-out.c (tui_out_new): Clear start_of_line.
	* tuiSource.c (tuiVerticalSourceScroll): Use print_source_lines
	to update the current source line.

2002-09-01  Stephane Carrez  <stcarrez@nerim.fr>

	* tui-hooks.c (tui_detach_hook): New hook to know when a process dies.
	(tui_install_hooks): Install it.
	(tui_remove_hooks): Remove it.

2002-09-01  Stephane Carrez  <stcarrez@nerim.fr>

	* tuiData.h (FILE_PREFIX): Don't define.
	(blankStr, locationStr, breakStr): Don't declare.
	(breakLocationStr, nullStr, historyLimit, setHistoryLimitTo): Likewise.
	(displayableWinContentOf, displayableWinContentAt): Likewise.
	(winElementHeight, winByName, freeAllWindows): Likewise.

	* tuiData.c (blankStr, locationStr, breakStr): Remove.
	(breakLocationStr, nullStr, historyLimit, setHistoryLimitTo): Remove.
	(displayableWinContentOf, displayableWinContentAt): Remove.